Dockerfile: use jetty, remove tomcat settings, set defaults